--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 .player {
-  display: inline-block;
+  width:50%;
+  float:left;
 }
 
 .game {
   width: 400px;
   height: 100px;
   border: 1px solid black;
-  margin: auto;
-  display: inline-block;
+  float:right;
 }
 
 #dino {
